# schedule-helper

./: DOCKER_SETUP.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  calendar.py  config.py  courses.py  projects.py  resources.py  router.py  rules.py  schedule.py  tasks.py
backend/app/db/: __init__.py  session.py  tables.py
backend/app/models/: __init__.py  academic.py  base.py  calendar.py  config.py  project.py  rules.py
backend/app/services/: __init__.py
backend/app/services/google/: __init__.py  calendar_service.py  sheets_service.py
backend/app/services/parsers/: __init__.py  document_parser.py
backend/app/services/scheduler/: __init__.py  smart_scheduler.py  task_time_analyzer.py
backend/app/services/sync/: __init__.py
backend/app/utils/: __init__.py
backend/tests/: __init__.py
electron/: package.json  test-electron.js
electron/src/: main.ts  preload.ts
electron/src/utils/: backend-manager.ts
frontend/: .dockerignore  Dockerfile  angular.json  nginx.conf  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/services/: api.service.ts
frontend/src/app/features/calendar/: calendar.component.ts
frontend/src/app/features/courses/: courses.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
resources/: Research Proposal.docx
(+4 files in other folders)
